Bug 1249253 - content removal processing can wrongly remove ARIA owned children, r=yzen